src/objects/Opp_Setup__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>opportunity_tile__c</fullName>
        <label>opportunity tile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opportunity_tile_product__c</fullName>
        <label>opportunity tile product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opportunity_tile_syncproduct__c</fullName>
        <label>opportunity tile syncproduct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opp Setup</label>
</CustomObject>